@@ -134,8 +134,9 @@ void octave_ncdim::rename(string new_name) {
   set_name(new_name);
 }
 
-
+#ifdef DEFINE_OCTAVE_ALLOCATOR
 DEFINE_OCTAVE_ALLOCATOR(octave_ncdim);
+#endif
 DEFINE_OV_TYPEID_FUNCTIONS_AND_DATA(octave_ncdim, "ncdim", "ncdim");
 
 
